--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="drawer_open">drawer open</string>
     <string name="drawer_close">drawer close</string>
 
-    <string name="facebook_app_id">1234</string>
-    <string name="fb_login_protocol_scheme">fb1234</string>
-    <string name="facebook_client_token">56789</string>
+    <string name="facebook_app_id">22423921</string>
+    <string name="fb_login_protocol_scheme">fb22423921</string>
+    <string name="facebook_client_token">62585231</string>
 </resources>
